# pyeodh

./: .gitignore  .pre-commit  .readthedocs.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  docker.yml  nightly.yml
docs/: api.rst  conf.py  index.rst  modules.rst  pyeodh.rst
notebooks/: ades.ipynb  ceda-rc.ipynb  planet-stac-proxy.ipynb  resource_catalog.ipynb  wmts.ipynb
pyeodh/: __init__.py  ades.py  api_mixin.py  base_object.py  client.py  consts.py  eodh_object.py  logger.py  pagination.py  resource_catalog.py  types.py  utils.py  workspace.py
scripts/: test-rc.py
tests/: __init__.py  ades_test.py  conftest.py  pagination_test.py  resource_catalog_test.py  test_version.py  types_test.py  utils_test.py  wmts_test.py  workspace_test.py
tests/cassettes/: test_get_catalog_service.yaml
tests/cassettes/ades_test/: test_delete_job.yaml  test_get_ades_service.yaml  test_get_job.yaml  test_get_jobs.yaml  test_get_non_existent_process.yaml  test_get_processes.yaml  test_process_execution.yaml
tests/cassettes/resource_catalog_test/: test_conformance_error_raised.yaml  test_get_catalog.yaml  test_get_catalog_service.yaml  test_get_catalogs_from_catalog.yaml  test_get_cloud_product.yaml  test_get_cloud_product_fail.yaml  test_get_collection_from_catalog.yaml  test_get_collection_item.yaml  test_get_collection_items.yaml  test_get_collection_items_total_count.yaml  test_get_collection_items_with_limit.yaml  test_get_collections_from_catalog.yaml  test_get_conformance.yaml  test_get_item_from_href.yaml  test_ping.yaml
tests/cassettes/wmts_test/: test_get_wms.yaml  test_get_wmts.yaml
tests/cassettes/workspace_test/: test_upload_file[test content-test.txt].yaml  test_upload_file[tests-data-test.txt-test.txt].yaml
tests/data/: convert-url.cwl  convert-url.yml
